[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyalpha"
version = "0.2.0"
description = "Python SDK for Polymarket — market discovery, real-time price streaming, and paper trading"
readme = "README.md"
license = {file = "License.md"}
requires-python = ">=3.9,<4.0"
authors = [
    {name = "polyalpha contributors"}
]
keywords = ["polymarket", "prediction markets", "trading", "api", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.24.0",
    "websocket-client>=1.0.0",
    "pydantic>=2.0.0",
    "web3>=6.0.0",
    "eth-account>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
analysis = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "requests>=2.28.0",
    "pandas-ta>=0.3.14b0",
]

report = [
    "plotly>=5.18.0",
    "rich>=13.0.0",
    "kaleido>=0.2.1",   # optional — only needed for save_png()
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

all = [
    "polyalpha[analysis,report,dev]",
]

[project.urls]
Homepage = "https://github.com/Genius740Code/polyalpha"
Documentation = "https://github.com/Genius740Code/polyalpha#readme"
Repository = "https://github.com/Genius740Code/polyalpha"
Issues = "https://github.com/Genius740Code/polyalpha/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "pandas_ta.*",
    "websocket.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = []

[tool.coverage.run]
source = ["src/polyalpha"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
