[project]
name = "polyalpha"
version = "0.1.0"
description = "Python SDK for Polymarket"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "websocket-client>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
